<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:orientation="vertical"
  tools:context=".ChoiceView">

  <Button
    android:id="@+id/btnCircleToRectangle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/circleToRectangle" />

  <Button
    android:id="@+id/btnRectangleToNapkin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/marginChoiceView"
    android:text="@string/rectangleToNapkin" />

  <Button
    android:id="@+id/btnCircleToNapkin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/marginChoiceView"
    android:text="@string/circleToNapkin" />

</androidx.appcompat.widget.LinearLayoutCompat>