<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:orientation="vertical"
  tools:context=".CircleToRectangleView">

  <EditText
    android:id="@+id/txtDiameter"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/diameter"
    android:inputType="numberDecimal" />

  <EditText
    android:id="@+id/txtLength"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:ems="10"
    android:hint="@string/sideLength"
    android:inputType="numberDecimal" />

  <Button
    android:id="@+id/btnCalculate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:text="@string/calculate"
    android:textSize="@dimen/fontSize" />

  <TextView
    android:id="@+id/lblResult"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:textSize="@dimen/fontSize" />
</androidx.appcompat.widget.LinearLayoutCompat>